# gPb-GSoC

./: .gitignore  LogFile  Makefile  README.md  README2  log_file.rtf
opencv_gpb/: Makefile  Makefile.osx  configure  configure.ac  gPb
opencv_gpb/autom4te.cache/: output.0  requests  traces.0  traces.1
opencv_gpb/include/gPb/: Filters.h  filters.h  globalPb.h
opencv_gpb/include/sPb/: affinity.h  array.h  buildW.h  dsaupd.h  ic.h  normCut.h  smatrix.h
opencv_gpb/include/seg/: VisWatershed.h  contour2ucm.h  ucm_mean_pb.h  uvt.h  watershed.h
opencv_gpb/src/: main.cpp
opencv_gpb/src/gPb/: Filters.cpp  Filters_backup.cpp  filters.cpp  globalPb.cpp
opencv_gpb/src/gPb/html/: annotated.html  class_active-members.html  class_active.html  class_bdry__element-members.html  class_bdry__element.html  class_d_f_tconvolver-members.html  class_d_f_tconvolver.html  class_hist_computer-members.html  class_hist_computer.html  class_hist_computer_3_01n_00_011_01_4-members.html  class_hist_computer_3_01n_00_011_01_4.html  class_neighbor___region-members.html  class_neighbor___region.html  class_order__node-members.html  class_order__node.html  class_region-members.html  class_region.html  classcv_1_1_parallel_invoker_unit-members.html  (+8 more)
opencv_gpb/src/html/: index.html
opencv_gpb/src/latex/: refman.tex
opencv_gpb/src/rtf/: refman.rtf
opencv_gpb/src/sPb/: affinity.cpp  buildW.cpp  ic.cpp  normCut.cpp  smatrix.cpp
opencv_gpb/src/seg/: VisWatershed.cpp  contour2ucm.cpp  ucm_mean_pb.cpp  uvt.cpp  watershed.cpp
opencv_gpb/src/xml/: index.xml  main_8cpp.xml  namespacestd.xml
(+284 files in other folders)
